# study-rust

./: .gitignore  Cargo.toml  LICENSE
docs/: 00-todo
old/docs/: 01-const_types_tuple_array_func  02-cargo-upx  03-package
old/minigrep/: Cargo.toml  xx
old/minigrep/src/: lib.rs  main.rs
old/src/: 02-owner_ref.rs  05-struct2.rs  06-enum1.rs  07-match_iflet.rs  10-vec.rs  13-error.rs  14-generic.rs  16-lifetime.rs  18-closure.rs  19-iterator.rs  main.rs
old/tests/: integration_test.rs
old/tests/common/: mod.rs
src/: 01-fmt.rs  01-guessing.rs  02-types.rs  03-linked-list.rs  03-slice.rs  04-ref.rs  04-struct.rs  05-const.rs  06-convert.rs  07-control.rs  08-iflet.rs  08-lab1.rs  09-lab2.rs  09-match.rs  10-function.rs  10-vec.rs  11-closure-capture.rs  11-string.rs  12-closure_trait.rs  12-hashmap.rs  13-error.rs  13-iterator.rs  14-struct-pub.rs  15-super-self.rs  15-trait.rs  16-lifetime.rs  17-lib-usage.rs  17-test.rs  18-attribute.rs  19-generic-impl.rs  20-generic-trait.rs  21-generic-bound.rs  22-generic-where.rs  23-generic-problem.rs  24-generic-associated-type.rs  25-generic-phantom.rs  26-generic-phantom-eg.rs  27-raii-owner-move.rs  28-borrow-1.rs  29-borrow-alias.rs  (+30 more)
src/16-mod-layout/: split.rs
tests/: integration_test.rs
